WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184785
Hide Strong Password label when text field is too narrow
https://bugs.webkit.org/show_bug.cgi?id=184785
Summary
Hide Strong Password label when text field is too narrow
Daniel Bates
Reported
2018-04-19 10:28:11 PDT
Hide Strong Password label when text field is too narrow.
Attachments
Patch and layout tests
(31.84 KB, patch)
2018-04-19 10:32 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch and layout tests
(31.85 KB, patch)
2018-04-19 11:03 PDT
,
Daniel Bates
zalan
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews125 for ios-simulator-wk2
(2.34 MB, application/zip)
2018-04-19 12:41 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2018-04-19 10:30:06 PDT
<
rdar://problem/38183939
>
Daniel Bates
Comment 2
2018-04-19 10:32:07 PDT
Created
attachment 338340
[details]
Patch and layout tests
Daniel Bates
Comment 3
2018-04-19 11:03:54 PDT
Created
attachment 338343
[details]
Patch and layout tests
EWS Watchlist
Comment 4
2018-04-19 12:41:48 PDT
Comment on
attachment 338343
[details]
Patch and layout tests
Attachment 338343
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/7373621
New failing tests: fast/forms/auto-fill-button/input-strong-confirmation-password-auto-fill-button.html fast/forms/auto-fill-button/input-strong-password-auto-fill-button.html
EWS Watchlist
Comment 5
2018-04-19 12:41:50 PDT
Created
attachment 338350
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.4
Daniel Bates
Comment 6
2018-04-19 14:12:33 PDT
(In reply to Build Bot from
comment #4
)
> Comment on
attachment 338343
[details]
> Patch and layout tests > >
Attachment 338343
[details]
did not pass ios-sim-ews (ios-simulator-wk2): > Output:
http://webkit-queues.webkit.org/results/7373621
> > New failing tests: > fast/forms/auto-fill-button/input-strong-confirmation-password-auto-fill- > button.html > fast/forms/auto-fill-button/input-strong-password-auto-fill-button.html
These failures are expected as I need to update expected results for iOS and didn't have a build around :P I will incorporate the EWS results into the patch before landing. Once landed, I will grab the updates expected results for these tests from the GTK, Apple Windows, and WinCairo bots and then land those results.
Daniel Bates
Comment 7
2018-04-19 14:26:17 PDT
Comment on
attachment 338343
[details]
Patch and layout tests View in context:
https://bugs.webkit.org/attachment.cgi?id=338343&action=review
> Source/WebCore/html/shadow/TextControlInnerElements.cpp:83 > + if (!is<HTMLInputElement>(element)) > + return false; > + const HTMLInputElement& inputElement = downcast<HTMLInputElement>(*element); > + return inputElement.isAutoFilled() && inputElement.hasAutoFillStrongPasswordButton();
It is not necessary for the field to be autofilled to be a strong password field though it will be in practice. It is enough to check that the field has the strong password button. Will mark this function inline and simplify this code to the following before landing: return is<HTMLInputElement>(element) && downcast<HTMLInputElement>(element)->hasAutoFillStrongPasswordButton();
Daniel Bates
Comment 8
2018-04-20 18:36:22 PDT
Committed
r230874
: <
https://trac.webkit.org/changeset/230874
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug